frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      name: frontend
  template:
    metadata:
      name: frontend
      labels:
        name: frontend
    spec:
      containers:
        - name: frontend
          # image: frontend-chat:latest
          image: theojust/theojust:frontend-chat
          ports:
            - containerPort: 3000
          # imagePullPolicy: IfNotPresent
          imagePullPolicy: Always
          # resources:
          #   limits:
          #     memory: 1024Mi
          #     cpu: "1"
          #   requests:
          #     memory: 1024Mi
          #     cpu: "1"

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  # type: NodePort, use default ClusterIP because Ingress
  selector:
    name: frontend
  ports:
    - port: 3000
      targetPort: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    name: frontend-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: frontend.cariherb.id
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service: 
                name: frontend-service
                port:
                  number: 3000
